Resultados/Raony/main/result_compilation.txt
tPacman.c: In function ‘CriaPacman’:
tPacman.c:38:57: warning: implicit declaration of function ‘realoc’; did you mean ‘realloc’? [-Wimplicit-function-declaration]
   38 |     pacman->nMovimentosSignificativos = (tMovimento **) realoc (sizeof(tMovimento *));
      |                                                         ^~~~~~
      |                                                         realloc
tPacman.c:38:41: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
   38 |     pacman->nMovimentosSignificativos = (tMovimento **) realoc (sizeof(tMovimento *));
      |                                         ^
tPacman.c:38:39: warning: assignment to ‘int’ from ‘tMovimento **’ makes integer from pointer without a cast [-Wint-conversion]
   38 |     pacman->nMovimentosSignificativos = (tMovimento **) realoc (sizeof(tMovimento *));
      |                                       ^
tPacman.c: In function ‘MovePacman’:
tPacman.c:95:24: error: redefinition of ‘pClone’
   95 |             tPosicao * pClone = ClonaPosicao(pacman->posicaoAtual);
      |                        ^~~~~~
tPacman.c:86:24: note: previous definition of ‘pClone’ with type ‘tPosicao *’
   86 |             tPosicao * pClone = ClonaPosicao(pacman->posicaoAtual);
      |                        ^~~~~~
tPacman.c:104:24: error: redefinition of ‘pClone’
  104 |             tPosicao * pClone = ClonaPosicao(pacman->posicaoAtual);
      |                        ^~~~~~
tPacman.c:95:24: note: previous definition of ‘pClone’ with type ‘tPosicao *’
   95 |             tPosicao * pClone = ClonaPosicao(pacman->posicaoAtual);
      |                        ^~~~~~
tPacman.c:113:24: error: redefinition of ‘pClone’
  113 |             tPosicao * pClone = ClonaPosicao(pacman->posicaoAtual);
      |                        ^~~~~~
tPacman.c:104:24: note: previous definition of ‘pClone’ with type ‘tPosicao *’
  104 |             tPosicao * pClone = ClonaPosicao(pacman->posicaoAtual);
      |                        ^~~~~~
